# dvfragments

./: LICENSE  README.md  pyproject.toml  setup.cfg
dvfragments/: __init__.py  consumers.py  notification_backend.py  utils.py  views.py
dvfragments/static/dvfragments/: reloadDVFragment.js  wiring.js
dvfragments/templatetags/: dvfragments.py
dvftestapp/: apps.py  views.py
dvftestapp/templates/dvftestapp/: view1.html
dvftestsite/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_dvf_views.py
tests/__snapshots__/: test_dvf_views.ambr
