[tool.poetry]
name = "dvfragments"
version = "0.1.0"
description = "Easily identify and fetch fragments of views to improve efficiency"
authors = ["David Park <david@greenparksoftware.co.uk>"]
license = "APACHE 2.0"

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=2.2"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.4"
pytest-django = ">=4.4.0"
syrupy = ">=1.3.1"
flake8 = ">=3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
